<resources>
    <string name="app_name">Split</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="all">All</string>
    <string name="groups">Groups</string>
    <string name="add_a_new_group">+ Add a new group</string>
    <string name="archive">Archive</string>
    <string name="user">User</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>

    <string name="expenses">Expenses</string>
    <string name="people">People</string>
    <string name="summary">Summary</string>
    <string name="users">Friends</string>
    <string name="connect_friend">+ Connect with a user</string>
    <string name="me">Me</string>
    <string name="icon">icon</string>
    <string name="test"><b>Petr</b> owes <b>Honza</b> 50 Kč for something.</string>
    <string name="email_or_id">email or id</string>
</resources>
